--- a/MvcCoreUtilidades/Views/Shared/_Layout.cshtml
+++ b/MvcCoreUtilidades/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UploadFiles" asp-action="SubirFile">Subir ficheros</a>
+                        </li>
                     </ul>
                 </div>
             </div>
