--- a/MvcCoreUtilidades/Views/UploadFiles/SubirFile.cshtml
+++ b/MvcCoreUtilidades/Views/UploadFiles/SubirFile.cshtml
@@ -9,7 +9,7 @@
         Subir fichero
     </button>
 </form>
-<img src='~/uploads/@ViewData["FILENAME"]'/>
+<img src='@ViewData["URLPATH"]'/>
 <h2 style="color:blue">
     @ViewData["MENSAJE"]
 </h2>
