--- a/MvcCoreUtilidades/Views/Shared/_Layout.cshtml
+++ b/MvcCoreUtilidades/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Caching" asp-action="Index">Memoria Caching</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Mails" asp-action="SendMail">Mail</a>
+                        </li>
                     </ul>
                 </div>
             </div>
