--- a/MvcCoreUtilidades/Views/Shared/_Layout.cshtml
+++ b/MvcCoreUtilidades/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Mails" asp-action="SendMail">Mail</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cifrados" asp-action="Index">Cifrados</a>
+                        </li>
                     </ul>
                 </div>
             </div>
